# TFG-2425

./: CMakeLists.txt  Pruebas  README.md
Includes/: Algorithm.h  Insertion.h  Machine.h  Problem.h  Solution.h  Tasks.h  Util.h
Includes/Algorithms/: ConstructionPhase.h  ExhaustedConstructionPhase.h  GRASP.h  Greedy.h  MultiGVNS.h
Includes/Environment/: Environment.h  (+5 more)
Instances/: I100j_10m_S1_UC_1.txt  I100j_10m_S1_UC_2.txt  I100j_10m_S1_UC_3.txt  I100j_10m_S1_UC_4.txt  I100j_10m_S1_UC_5.txt  I100j_10m_S1_UU_1.txt  I100j_10m_S1_UU_2.txt  I100j_10m_S1_UU_3.txt  I100j_10m_S1_UU_4.txt  I100j_10m_S1_UU_5.txt  I100j_10m_S2_UC_1.txt  I100j_10m_S2_UC_2.txt  I100j_10m_S2_UC_3.txt  I100j_10m_S2_UC_4.txt  I100j_10m_S2_UC_5.txt  I100j_10m_S2_UU_1.txt  I100j_10m_S2_UU_2.txt  I100j_10m_S2_UU_3.txt  I100j_10m_S2_UU_4.txt  I100j_10m_S2_UU_5.txt  I100j_10m_S3_UC_1.txt  I100j_10m_S3_UC_2.txt  I100j_10m_S3_UC_3.txt  I100j_10m_S3_UC_4.txt  I100j_10m_S3_UC_5.txt  I100j_10m_S3_UU_1.txt  I100j_10m_S3_UU_2.txt  I100j_10m_S3_UU_3.txt  I100j_10m_S3_UU_4.txt  I100j_10m_S3_UU_5.txt  I100j_2m_S1_UC_1.txt  I100j_2m_S1_UC_2.txt  I100j_2m_S1_UC_3.txt  I100j_2m_S1_UC_4.txt  I100j_2m_S1_UC_5.txt  I100j_2m_S1_UU_1.txt  I100j_2m_S1_UU_2.txt  I100j_2m_S1_UU_3.txt  I100j_2m_S1_UU_4.txt  I100j_2m_S1_UU_5.txt  (+1020 more)
Model/: ModelUser.py  PredictiveModel.py  model_order.pkl  scaler_order.pkl
Results/: sourceData.csv
SolutionTables/: Greedy.md  SolutionTable.md  SolutionTableGVNS.md  SolutionTableGrasp.md  SolutionTableGreedy.md
src/: Machine.cc  Parallel-machine.cc  Problem.cc  Pruebas.cc  Solution.cc
(+29 files in other folders)
